<resources>
    <string name="app_name">Quản lí hiệu sách</string>
    <string name="title_activity_login">Sign in</string>
    <string name="nguoi_dung">Người dùng</string>

    <string name="username">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="password1">***********</string>

    <string name="error_UserName">Bạn phải nhập đầy đủ thông tin</string>
    <string name="error_PassWord">Bạn phải nhập đầy đủ thông tin</string>
    <string name="error_Ki_Tu_Dac_Bite">Không chứa kí tự đặc biêt</string>
    <string name="error_PassWord_It_Hon_6Ki_Tu">Vui lòng nhập lại ,mật khẩu phải có ít nhất 6 kí tự</string>
    <string name="tv_name">Tên đăng nhập</string>
    <string name="re_password">Nhập lại mật khẩu</string>
    <string name="ten">Name</string>
    <string name="sdt">Phone</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="search">search</string>
    <string name="exit">Thoát</string>
    <string name="quan_li_sach">Sách</string>
    <string name="sach_ban_chay">Sách bán chạy</string>
    <string name="the_loai">Loại sách</string>
    <string name="thong_ke">Thống kê</string>
    <string name="ic_exit">Thoát</string>
    <string name="hoa_don">Hóa đơn</string>
    <string name="password2">vuabocphet</string>
    <string name="password3">Nhập lại mật khẩu</string>
    <string name="nho_mat_khau1">Nhớ mật khẩu mới</string>
    <string name="gioi_thieu">Giới thiệu</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="doi_mat_khau">Đổi mật khẩu</string>
    <string name="notify_wrong_username_or_password">Thông tin tài khoản hoặc mật khẩu không đúng</string>
    <string name="tv_phone">Phone</string>
    <string name="btn_save">Lưu</string>
    <string name="btn_cancel">Hủy</string>
    <string name="notify_save_successful">Lưu thành công</string>

    <string name="notify_add_successful">Thêm thành công</string>
    <string name="btn_huy">Hủy</string>
    <string name="username1">Gia Giỏi</string>
    <string name="nametypebook">Tên Thể Loại</string>
    <string name="id1">Mã Thể Loại</string>
    <string name="posi">Vị Trí</string>
    <string name="des">Mô tả</string>
    <string name="add_successful">Thêm Thể Loại Thành Công</string>
    <string name="date_picker">DatePicker</string>
    <string name="notify_max_bill_id_length">Bill ID\'s length is the maximum 7 characters!!!</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="tdn">Tên đăng nhập</string>
    <string name="password5">gioikin123</string>
    <string name="masach">Mã sách</string>
    <string name="tensach">Tên sách</string>
    <string name="tacgia">Tác giả</string>
    <string name="nhaxb">Nhà xuất bản</string>
    <string name="giabia">Giá bìa</string>
    <string name="soluong">Số lượng</string>
    <string name="btnshow">Show</string>
    <string name="cbremember">Remember ?</string>
    <string name="khoapham">Khoa Pham Training</string>
    <string name="tim">Tìm</string>
    <string name="homnay">Hôm nay:</string>
    <string name="thangnay">Tháng này:</string>
    <string name="namnay">Năm 2018:</string>
    <string name="text">1.000.000 VNĐ</string>
    <string name="Maloai">Mã Loại Sách</string>
    <string name="themhd">THÊM HÓA ĐƠN</string>
    <string name="theloai">Mã Thể Loại</string>
    <string name="chonngay">Chọn ngày</string>
    <string name="chon">Chọn</string>
    <string name="hdct">CHI TIẾT HÓA ĐƠN</string>
    <string name="matkhaumoi">Mật khẩu mới</string>
    <string name="nhaplaimk">Nhập lại mật khẩu</string>
    <string name="luulai">Lưu lại</string>
    <string name="ngay">Ngày</string>
    <string name="tennd">Tên người dùng</string>
    <string name="sdt1">Số điện thoại</string>
    <string name="title_list_user_act">Người Dùng</string>

</resources>
