<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ThemSachActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarLogin"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextColor="#ffffff" />

    <EditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masach" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:paddingTop="15dp"

            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="TODO"
            android:src="@drawable/buttonplusgreen" />
    </LinearLayout>

    <EditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tensach" />

    <EditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tacgia" />

    <EditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nhaxb" />

    <EditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/giabia" />

    <EditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/soluong" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/login_button"
            android:text="@string/btn_save"
            android:textAllCaps="false"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btnCancelBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/login_button"
            android:text="@string/btn_huy"
            android:textAllCaps="false"
            android:textColor="#ffffff" />
    </LinearLayout>

    <Button

        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/login_button"
        android:text="@string/btnshow"
        android:textAllCaps="false"

        android:textColor="#ffffff" />
</LinearLayout>