<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/hdct"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:padding="8dp"
        android:text="@string/masach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Spinner
        android:id="@+id/spBookID"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:padding="8dp"
            android:id="@+id/edtQuality"
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:hint="@string/soluong" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_marginBottom="3dp"
            android:id="@+id/btnThem_HoaDonChiTiet"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/login_button"
            android:text="@string/themhd"
            android:textAllCaps="false"
            android:textColor="#ffffff" />

        <Button
            android:layout_marginBottom="3dp"
            android:id="@+id/btnHuy_HoaDonChiTiet"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/login_button"
            android:text="@string/btn_huy"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:layout_marginLeft="10dp" />
    </LinearLayout>
</LinearLayout>