<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarLogin"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextColor="#ffffff"></android.support.v7.widget.Toolbar>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo"
        android:contentDescription="TODO" />
    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/edUserNam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorText1"
        android:backgroundTint="@color/colorText"
        android:text="giagioi"
        android:hint="@string/tdn"
        tools:targetApi="lollipop" />
    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:text="@string/password5"
        android:textColorHint="@color/colorText1"
        android:backgroundTint="@color/colorText"
        android:inputType="textPassword"
        tools:targetApi="lollipop" />
    <CheckBox
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cbremember"
        android:checked="true"
        android:id="@+id/chkRememberPass"
        />
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:background="@drawable/login_button"
            android:onClick="checkLogin"
            android:shadowRadius="30"
            android:textAllCaps="false"
            android:text="@string/dangnhap"
            android:textColor="#ffffff"
            android:layout_marginLeft="10dp" />
        <Button
            android:shadowRadius="30"
            android:id="@+id/btnHuy"
            android:textAllCaps="false"
            android:background="@drawable/login_button"
            android:textColor="#f7f7f7"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:onClick="checkHuy"
            android:text="@string/btn_huy"
            android:layout_marginLeft="35dp" />
    </LinearLayout>

</LinearLayout>