<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_height="match_parent">



    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edPassword"
            android:hint="@string/password"
            android:layout_margin="10sp"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textColor="@color/colorText1"
            android:textColorHint="@color/colorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ednhaplaimatkhau"
            android:hint="@string/re_password"
            android:layout_margin="10sp"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textColor="@color/colorText1"
            android:textColorHint="@color/colorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edName"
            android:hint="@string/ten"
            android:textColorHint="@color/colorText"
            android:layout_margin="10sp"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edPhone"
            android:layout_margin="10sp"
            android:textColorHint="@color/colorText"
            android:hint="@string/sdt"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/login_button"
        android:textColor="#ffffff"
        android:id="@+id/btSave"
        android:textAllCaps="false"
        android:text="@string/btn_save"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />
    <Button
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:layout_marginBottom="20dp"
        android:background="@drawable/login_button"
        android:textColor="#ffffff"
        android:id="@+id/btnHuy"
        android:text="@string/btn_huy"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />
</LinearLayout>