<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="15dp"
    android:orientation="vertical">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/tv_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textColor="@color/colorText1"
            android:textColorHint="@color/colorText" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textColor="@color/colorText1"
            android:textColorHint="@color/colorText" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ednhaplaimatkhau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/re_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textColor="@color/colorText1"
            android:textColorHint="@color/colorText" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:hint="@string/ten"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textColorHint="@color/colorText" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/sdt"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:textColorHint="@color/colorText" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btSave"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:background="@drawable/login_button"
            android:text="@string/btn_save"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btnHuy"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10sp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:background="@drawable/login_button"
            android:text="@string/btn_huy"
            android:textColor="#ffffff" />
    </LinearLayout>
</LinearLayout>