<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/themhd"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edMaHoaDon_HoaDon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/theloai" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvChonNgay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:text="@string/chonngay"
            android:textSize="18sp"
            android:paddingLeft="5dp" />

        <Button
            android:id="@+id/btnPicker"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/login_button"
            android:text="@string/chon"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btnThem_ThemHoaDon"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:background="@drawable/login_button"
            android:text="@string/themhd"
            android:textAllCaps="false"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btnHuy_ThemHoaDon"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:background="@drawable/login_button"
            android:text="@string/btn_huy"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:layout_marginLeft="10dp" />
    </LinearLayout>
</LinearLayout>